make sure skip to content is hidden  on firefox

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,7 +17,7 @@ a {
 #skip-to-content a {
 	padding:6px;
 	position: absolute;
-	top:-40px;
+	top:-45px;
 	left:0px;
 	color:white;
 	border-right:1px solid white;
